--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,12 +1,13 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/LOCMNS?serverTimezone=UTC&createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://@adresse_serveur_bdd@/@nom_bdd@?serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.username=@utilisateur_bdd@
+spring.datasource.password=@mot_de_passe_bdd@
 
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto = create
-spring.jackson.date-format=yyyy-MM-dd
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto = @ddl_auto@
 
-spring.sql.init.platform = mysql
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode = always
+spring.sql.init.platform = @nom_fichier_sql@
+spring.jpa.defer-datasource-initialization=@initialisation_donne_bdd@
+spring.sql.init.mode = @mod_initialisation_donne_bdd@
 hibernate.dialect.storage_engine=innodb
+dossier.upload=@dossier_upload@ C:\\\\upload
+jwt.secret = @jwt_secret@
