--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -87,11 +87,11 @@
 			<id>prod</id>
 			<properties>
 				<skipUnitTest>true</skipUnitTest>
-				<adresse_serveur_bdd>172.18.0.0:3306</adresse_serveur_bdd>
+				<adresse_serveur_bdd>172.18.0.2:3306</adresse_serveur_bdd>
 				<nom_bdd>spring_mns_23</nom_bdd>
 				<utilisateur_bdd>root</utilisateur_bdd>
 				<mot_de_passe_bdd>Info à définir dans le fichier settings.xml du serveur</mot_de_passe_bdd>
-				<ddl_auto>none</ddl_auto>
+				<ddl_auto>create</ddl_auto>
 				<nom_fichier_sql></nom_fichier_sql>
 				<initialisation_donne_bdd>false</initialisation_donne_bdd>
 				<mod_initialisation_donne_bdd>never</mod_initialisation_donne_bdd>
