--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -76,7 +76,7 @@
 				<adresse_serveur_bdd>localhost:3306</adresse_serveur_bdd>
 				<nom_bdd>spring_mns_23</nom_bdd>
 				<utilisateur_bdd>root</utilisateur_bdd>
-				<mot_de_passe_bdd></mot_de_passe_bdd>
+				<password_bdd></password_bdd>
 				<ddl_auto>create</ddl_auto>
 				<nom_fichier_sql>mysql</nom_fichier_sql>
 				<initialisation_donne_bdd>true</initialisation_donne_bdd>
@@ -92,7 +92,7 @@
 				<adresse_serveur_bdd>172.18.0.2:3306</adresse_serveur_bdd>
 				<nom_bdd>spring_mns_23</nom_bdd>
 				<utilisateur_bdd>root</utilisateur_bdd>
-				<mot_de_passe_bdd>Info à définir dans le fichier settings.xml du serveur</mot_de_passe_bdd>
+				<password_bdd>Info à définir dans le fichier settings.xml du serveur</password_bdd>
 				<ddl_auto>create</ddl_auto>
 				<nom_fichier_sql></nom_fichier_sql>
 				<initialisation_donne_bdd>false</initialisation_donne_bdd>
