--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://@adresse_serveur_bdd@/@nom_bdd@?serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=@utilisateur_bdd@
-spring.datasource.password=@mot_de_passe_bdd@
+spring.datasource.password=@password_bdd@
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto = @ddl_auto@
